# JeDepth

./: .gitignore  CLAUDE.md  LICENSE  README.md  demo.py  experiments.csv  from-local-dev-rtx-6000-kaggle-cli-guide.ipynb  losses.py  main.py  train.py  train.sh
.claude/: settings.local.json
.claude/projects/-home-thetrung-Documents-CT-UAV-Obstacle-Avoidance-ws2/memory/: MEMORY.md  feedback_kaggle_competition.md
bridgedepth/config/: default.py
bridgedepth/dataloader/: depth_dataset.py
bridgedepth/utils/: eval_custom.py
cfgs/: data_basic.py
cfgs/iinet/: iinet_custom.yaml
configs/Real/: stereo_smallbaseline.yaml
cores/depth_estimation/ct_uav_depth_package/: README.md  package.xml  setup.cfg  setup.py
cores/depth_estimation/ct_uav_depth_package/config/: camera_config.yaml  strereo_config.yaml
cores/depth_estimation/ct_uav_depth_package/ct_uav_depth_package/: camera_config.py  demo_one.py  demo_three.py  demo_two.py  hinet_depth_node_ego.py  reference.py
cores/depth_estimation/ct_uav_depth_package/video/: video.avi
cores/planner/ct_uav_ego_px4_bridge/: README.md  package.xml  setup.cfg  setup.py
cores/planner/ct_uav_simulator/Utils/odom_visualization/: CMakeLists.txt  package.xml
cores/planner/ct_uav_simulator/Utils/odom_visualization/src/: odom_visualization.cpp
cores/planner/ct_uav_simulator/Utils/pose_utils/: CMakeLists.txt
data/: CLAUDE.md  build_index.py  eda.py  preprocess.py
dataset/: __init__.py  dataio.py  depth_dataset.py
docker/: Dockerfile.inference.jp62
docs/: 0.get_started.md  1.model_zoo.md  3.detailed_config.md  README.md  download_StereoCarla.md  prepare_foundationstereo.md
docs/rules/: README.CommitRules.md
inference_ws/: README.md
inference_ws/ct_uav_stereo_cpp/: CMakeLists.txt  README.md  package.xml
inference_ws/ct_uav_stereo_cpp/config/: stereo_filter_config.yaml
inference_ws/ct_uav_stereo_cpp/docs/: CAMERA_USAGE.md  README.HardwareSync.md  SGM_IMPLEMENTATION.md  SGM_USAGE.md
inference_ws/ct_uav_stereo_cpp/include/ct_uav_stereo_cpp/: cu_color_cvt.h  depth_filter.hpp  histogram.h  infer_fastACV.hpp  infer_fastFS.hpp  infer_hitnet.hpp  infer_sgm.hpp  stereo_calibration.hpp  stereo_camera_driver.hpp
inference_ws/ct_uav_stereo_cpp/launch/: stereo_camera_with_record.launch.py  stereo_depth.launch.py  stereo_obstacle_avoidance.launch.py  test_hw_sync.launch.py
inference_ws/ct_uav_stereo_cpp/libs/: cu_color_cvt.cu  depth_filter.cpp  histogram.cu  infer_fastACV.cpp  infer_fastACV_kernel.cu  infer_fastFS.cpp  infer_fastFS_kernel.cu  infer_hitnet.cpp  infer_sgm.cpp  stereo_calibration.cpp  stereo_camera_driver.cpp
inference_ws/ct_uav_stereo_cpp/scripts/: cpp_refer_gstreamer_cv_cuda.cpp  gstdsexample.cpp  python_refer.py
inference_ws/ct_uav_stereo_cpp/src/: obstacle_prevenation_node.cpp  stereo_camera_node.cpp  stereo_depth_node.cpp
inference_ws/ct_uav_stereo_cpp/src_py/: fake_gps.py  recorder.py  simple_camera.py  visualize_test.py
inference_ws/ct_uav_stereo_cpp/src_py/stereo_flight_log/: metadata.yaml
jedepth/dataset/: __init__.py  depth_dataset.py  kitti2012.py
jedepth/dataset/utils/: dataio.py  stereo_trans.py
jedepth/model/: iinet.py  loss.py  trainer.py
jedepth/modeling/: __init__.py  trainer_template.py
jedepth/utils/: common_utils.py  warmup.py
kaggle/: push_training.sh  push_update_code.sh  push_utility.sh
kaggle/training/: kernel-metadata.json  runs.md  train-depth-model-waft.ipynb  train-depth-model.ipynb
kaggle/utility/: hitnet_utility.py  kernel-metadata.json  waft-utility.py
model/encoder/: dav2.py
model/iterative/: vit.py
models/: __init__.py  hit_net_sf.py
reference/evaluation/: evaluation.py
scripts/: entrypoint.sh  install_opencv.sh  setup_env.sh
simulation_ws/ct_uav_omni_fast_stream/: .gitignore  CMakeLists.txt  package.xml
simulation_ws/ct_uav_omni_fast_stream/config/: _info.yaml  cam0_info.yaml  cam1_info.yaml  cam2_info.yaml  cam3_info.yaml
simulation_ws/ct_uav_omni_fast_stream/include/: cassini_conversion.hpp  fast_stream_node.hpp  fast_stream_node_cassini.hpp  fast_stream_stereo.hpp  record_data.hpp
simulation_ws/ct_uav_omni_fast_stream/launch/: composable_recorder.launch.py  composable_seg_recorder.launch.py  wrapper_airsim.launch.py  wrapper_airsim_eight.launch.py  wrapper_airsim_stereo.launch.py
simulation_ws/ct_uav_omni_fast_stream/rviz/: uav_collision_prevention.rviz
simulation_ws/ct_uav_omni_fast_stream/scripts/: airsim_multi_cam_viewer.py  convert_ros2_db3_to_data.py  create_depth_dataset.py  create_depth_dataset_by_airsim_api.py  create_segment_dataset.py  panorama.py  record_path.py  test_video.py
simulation_ws/ct_uav_omni_fast_stream/scripts/trajectory_logs/: quick_test.txt  trajectory_sim_13_11.txt  trajectory_sim_31_10.txt
simulation_ws/ct_uav_omni_fast_stream/scripts/utils/: generate_grid.py  perspective_utils.py  pointCloud_utils.py
simulation_ws/ct_uav_omni_fast_stream/src/: fast_stream_node.cpp  fast_stream_node_cassini.cpp  fast_stream_stereo.cpp  record_data.cpp
simulation_ws/ct_uav_omni_fast_stream/src_py/: test_2cam_depth_collision_preventation.py  transform_tf2.py
simulation_ws/docs/: README.Record.md  README.RunSIm.md  README.SetupEnv.md  README.StreamPointCloud.md  README.Test.md
tools/: eval.py  measure.py  train.py
tools/scripts/: change_permission.sh  constant.sh  eval_stereoanything.sh  submit.sh
training/: train.py  train.sh
training/cfgs/: ffstereo_custom.yaml
training/jedepth/core/: distill_block.py  extractor.py  foundation_stereo.py  geometry.py  submodule.py  update.py
training/jedepth/dataset/: __init__.py  depth_dataset.py
training/jedepth/evaluation/: __init__.py  boundary_metric.py  disparity_metric.py  pointCloud_metric.py
training/jedepth/utils/: utils.py
training/output/tb_logs/: events.out.tfevents.1776062031.thetrung-G5-KC.491169.0  events.out.tfevents.1776062607.thetrung-G5-KC.506535.0  events.out.tfevents.1776063863.thetrung-G5-KC.538899.0  events.out.tfevents.1776064065.thetrung-G5-KC.544366.0
training/pretrained/23-36-37/: download.sh
training/test_images/: stereo_config.yaml
(+66 files in other folders)
